# agent-security-gateway

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
config/: default_policy.json
docs/: architecture_roadmap.md  delegation_model.md
examples/: delegated_read_request.json  low_risk_read.json  mcp_delegated_read_call.json  mcp_low_risk_read_call.json  production_deploy.json  prompt_injection_image.json  secret_exfiltration.json  tainted_external_send.json
policy_packs/: appsec.json  soc.json  software_engineering.json
src/agent_security_gateway/: __init__.py  approvals.py  authz_state.py  cli.py  dashboard.py  demo.py  envelopes.py  gateway.py  io.py  ledger.py  mcp_adapter.py  models.py  policy.py  policy_packs.py  risk.py  showcase.py  taint.py  telemetry.py
tests/: test_approval_binding_and_ledger.py  test_cli.py  test_dashboard.py  test_delegation.py  test_gateway.py  test_mcp_adapter.py  test_policy.py  test_policy_packs.py  test_showcase.py  test_taint.py  test_telemetry_otlp.py
